prevent text overflow

--- a/app/assets/stylesheets/boards.scss
+++ b/app/assets/stylesheets/boards.scss
@@ -182,6 +182,7 @@ li{
   border-radius: 4px;
   padding-left: 10px;
   padding-top: 10px;
+  word-break: break-all;
 }
 .list-items:hover{
   background-color: #CFCFCF;
